HVAC Backup 2/objects/Department__c(1).object
<CustomObject>
    <fields>
        <fullName>AISDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AISDH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Departments</relationshipLabel>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Number__c</fullName>
        <externalId>true</externalId>
        <label>Department Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>Division__c</referenceTo>
        <relationshipLabel>Departments</relationshipLabel>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMS_Events__c</fullName>
        <label>PMS Events</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_AIH_Email__c</fullName>
        <label>Sales AIH Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_AM_Email__c</fullName>
        <label>Sales AM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_RM_Email__c</fullName>
        <label>Sales RM Email</label>
        <type>Email</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Department_Number__c</columns>
        <columns>Division__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Sales_Department</fullName>
        <columns>NAME</columns>
        <columns>Department_Number__c</columns>
        <columns>Division__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Department__c.Sales</value>
        </filters>
        <label>Sales Department</label>
    </listViews>
    <listViews>
        <fullName>Service_Department</fullName>
        <columns>NAME</columns>
        <columns>Department_Number__c</columns>
        <columns>Division__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <columns>AISDH__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Department__c.Service</value>
        </filters>
        <label>Service Department</label>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <label>Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <label>Service</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>